Commit solucion error js, responsive otros navegadores

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>¿Qué personaje eres?</p>
         </div>
         <div class="container-image" id="image">
-            <img src="images/inter.png" alt="" id="inter">
+            <img src="fotos/inter.png" alt="" id="inter">
         </div>
         <div class="raya-atras">
 
