--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Permanent+Marker&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- reemplazo del mainjs -->
     <script>
         
 function send(){
